[gd_scene load_steps=17 format=2]

[ext_resource path="res://engine/gameplay_handler.gd" type="Script" id=1]
[ext_resource path="res://assets/background_brown.png" type="Texture" id=2]
[ext_resource path="res://ui/QueueList.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/UITimer.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/RegularFont.res" type="DynamicFont" id=5]
[ext_resource path="res://ui/TitleContainer-Content.stylebox" type="StyleBox" id=6]
[ext_resource path="res://ui/TitledPanelContainer.stylebox" type="StyleBox" id=7]
[ext_resource path="res://ui/TitleContainerTitle.res" type="DynamicFont" id=8]
[ext_resource path="res://ui/RegularButtonNormal.stylebox" type="StyleBox" id=9]
[ext_resource path="res://ui/RegularButtonHover.stylebox" type="StyleBox" id=10]
[ext_resource path="res://ui/RegularButtonPressed.stylebox" type="StyleBox" id=11]
[ext_resource path="res://assets/ui/forward.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/home.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/return.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5000, 200 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="gameplay_handler" type="Node"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="block_preview" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.505882 )

[node name="level" type="Node2D" parent="."]

[node name="static" type="Node2D" parent="level"]

[node name="active" type="Node2D" parent="level"]

[node name="OutOfBoundsArea2D" type="Area2D" parent="."]
position = Vector2( 512, 825 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBoundsArea2D"]
shape = SubResource( 1 )

[node name="QueueList" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="UITimer" parent="." instance=ExtResource( 4 )]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -505.0
margin_top = -435.0
margin_right = -221.0
margin_bottom = -401.0

[node name="Label" type="Label" parent="UITimer"]
margin_top = -17.0
margin_right = 119.0
margin_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Stabilizing"

[node name="CenterContainer" type="CenterContainer" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EndGamePanel" type="PanelContainer" parent="CenterContainer"]
margin_left = 512.0
margin_top = 292.0
margin_right = 512.0
margin_bottom = 308.0
custom_styles/panel = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/EndGamePanel"]
margin_top = 16.0
margin_right = 695.0
margin_bottom = 188.0
mouse_filter = 0

[node name="LostLabel" type="Label" parent="CenterContainer/EndGamePanel/VBoxContainer"]
margin_right = 695.0
margin_bottom = 26.0
mouse_filter = 0
custom_fonts/font = ExtResource( 8 )
text = "level failed"
align = 1

[node name="WonLabel" type="Label" parent="CenterContainer/EndGamePanel/VBoxContainer"]
margin_top = 30.0
margin_right = 695.0
margin_bottom = 56.0
mouse_filter = 0
custom_fonts/font = ExtResource( 8 )
text = "Level cleared"
align = 1

[node name="EndLabel" type="Label" parent="CenterContainer/EndGamePanel/VBoxContainer"]
visible = false
margin_top = 60.0
margin_right = 695.0
margin_bottom = 86.0
mouse_filter = 0
custom_fonts/font = ExtResource( 8 )
text = "  You beat the game!  "
align = 1

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/EndGamePanel/VBoxContainer"]
margin_top = 60.0
margin_right = 695.0
margin_bottom = 172.0
custom_styles/panel = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/EndGamePanel/VBoxContainer/PanelContainer"]
margin_left = 16.0
margin_top = 20.0
margin_right = 679.0
margin_bottom = 96.0
mouse_filter = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/EndGamePanel/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 663.0
margin_bottom = 76.0
mouse_filter = 0
alignment = 1

[node name="HomeButton" type="Button" parent="CenterContainer/EndGamePanel/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 224.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 9 )
text = "Main Menu"
icon = ExtResource( 13 )

[node name="RepeatButton" type="Button" parent="CenterContainer/EndGamePanel/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 228.0
margin_right = 422.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 9 )
text = "Repeat"
icon = ExtResource( 14 )

[node name="NextLevelButton" type="Button" parent="CenterContainer/EndGamePanel/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 426.0
margin_right = 663.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 9 )
text = "Next Level"
icon = ExtResource( 12 )

[connection signal="body_entered" from="OutOfBoundsArea2D" to="." method="_on_OutOfBoundsArea2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="CenterContainer/EndGamePanel/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="CenterContainer/EndGamePanel/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/RepeatButton" to="." method="_on_RepeatButton_pressed"]
[connection signal="pressed" from="CenterContainer/EndGamePanel/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
